Name:            wikipedia4epub
Version:         0.0.1
License:         BSD3
License-File:    LICENSE
Synopsis:        Wikipedia EPUB E-Book command from Firefox history.
Author:          Radoslav Dorcik <radoslav.dorcik@gmail.com>
Maintainer:      radoslav.dorcik@gmail.com
Description:     
  .
  Wikipedia EPUB E-Book Construction from Firefox History.
  It dumps history and select only wikipedia articles, fetch
  thier printable versions and construb EPUB book for E-Book
  readers.
  .
Category:        Text
Stability:       experimental
Build-Type:      Simple
Cabal-Version:   >= 1.6
    
Library
  Build-Depends:   ghc,
                   base < 5,
                   filepath,
                   haskell98,
                   url,
                   directory,
                   utf8-string,
                   epub,
                   bytestring,
                   regex-pcre,
                   regex-base,
                   HDBC-sqlite3,
                   HDBC >= 2.1.1,
                   tagsoup >= 0.8,
                   HTTP,      
                   zip-archive,
                   xml,
                   Cabal        >= 1.5 && < 1.9
  Hs-Source-Dirs:  src
  Extensions:      CPP, PatternGuards
  Ghc-Options:      -Wall -fno-warn-orphans

Executable wikipedia4epub
  Hs-Source-Dirs:  src
  Main-Is:         wikipedia4epub.hs
